add missing style

--- a/src/style/orderFavorites.css
+++ b/src/style/orderFavorites.css
@@ -4,3 +4,9 @@
     justify-content: center;
     flex-direction: column;
 }
+
+.order-favorites .button {
+    margin: 2em;
+    padding: 1em;
+    align-self: center;
+}
